# Qt-Felgo-OpenCV

./: .gitignore  CMakeLists.txt  LICENSE.txt  Qt-Felgo-OpenCV.pro  README.md  README.mdown  main.cpp  ocvdecoder.cpp  ocvdecoder.h
android/: AndroidManifest.xml  build.gradle
android/res/values/: strings.xml
android/res/xml/: file_paths.xml
ios/: Project-Info.plist
macx/: Project-Info.plist
qml/: Main.qml  QrScannerPage.qml  ResultPage.qml  config.json
